2009-12-19  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Adam Roben.

        Provide an example implementation for printing under Windows.
        http://bugs.webkit.org/show_bug.cgi?id=32504.`

        * WinLauncher/PrintWebUIDelegate.cpp: Added.
        (PrintWebUIDelegate::QueryInterface):
        (PrintWebUIDelegate::AddRef):
        (PrintWebUIDelegate::Release):
        (PrintWebUIDelegate::webViewPrintingMarginRect):
        * WinLauncher/PrintWebUIDelegate.h: Added.
        (PrintWebUIDelegate::PrintWebUIDelegate):
        (PrintWebUIDelegate::createWebViewWithRequest):
        (PrintWebUIDelegate::webViewShow):
        (PrintWebUIDelegate::webViewClose):
        (PrintWebUIDelegate::webViewFocus):
        (PrintWebUIDelegate::webViewUnfocus):
        (PrintWebUIDelegate::webViewFirstResponder):
        (PrintWebUIDelegate::makeFirstResponder):
        (PrintWebUIDelegate::setStatusText):
        (PrintWebUIDelegate::webViewStatusText):
        (PrintWebUIDelegate::webViewAreToolbarsVisible):
        (PrintWebUIDelegate::setToolbarsVisible):
        (PrintWebUIDelegate::webViewIsStatusBarVisible):
        (PrintWebUIDelegate::setStatusBarVisible):
        (PrintWebUIDelegate::webViewIsResizable):
        (PrintWebUIDelegate::setResizable):
        (PrintWebUIDelegate::setFrame):
        (PrintWebUIDelegate::webViewFrame):
        (PrintWebUIDelegate::setContentRect):
        (PrintWebUIDelegate::webViewContentRect):
        (PrintWebUIDelegate::runJavaScriptAlertPanelWithMessage):
        (PrintWebUIDelegate::runJavaScriptConfirmPanelWithMessage):
        (PrintWebUIDelegate::runJavaScriptTextInputPanelWithPrompt):
        (PrintWebUIDelegate::runBeforeUnloadConfirmPanelWithMessage):
        (PrintWebUIDelegate::runOpenPanelForFileButtonWithResultListener):
        (PrintWebUIDelegate::mouseDidMoveOverElement):
        (PrintWebUIDelegate::contextMenuItemsForElement):
        (PrintWebUIDelegate::validateUserInterfaceItem):